<resources>
    <string name="app_name">Y-MOVIES</string>
    <string name="welcome">Welcome To</string>
    <string name="search">What are you looking for ?</string>
    <string name="genre">What genres do you like ?</string>
    <string name="genre_movie">Movies Genres</string>
    <string name="genre_serie">Series Genres</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="remove"><u>Remove</u></string>
    <string name="FavoriteSerie"><u>Favorite serie</u></string>
    <string name="FavoriteMovie"><u>Favorite movie</u></string>
</resources>