<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_100"
    tools:context=".ui.introduction.MovieOrSerie">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="50px" />

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/purple_500"
            android:textSize="120px" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:onClick="showMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:padding="20dp"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:text="Movies"/>
        <TextView
            android:onClick="showSerie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/purple_500"
            android:textStyle="bold"
            android:padding="20dp"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="Series"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="Or"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="Search"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25dp" />

</LinearLayout>