<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.listing.ListingFavoriteSerie">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="Favorite serie"
            android:textColor="@color/purple_500"
            android:textSize="120px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="right"
            android:gravity="right">
            <TextView
                android:onClick="removeFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="right"
                android:textColor="@color/white"
                android:text="@string/remove"
                android:textSize="15dp" />
            <TextView
                android:onClick="favoriMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="right"
                android:textColor="@color/white"
                android:text="@string/FavoriteMovie"
                android:textSize="15dp" />
        </LinearLayout>
        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            tools:text="@string/app_name"
            android:textColor="@color/purple_100" />
        <ListView
            android:id="@+id/listViewData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/light"
        android:layout_alignParentBottom="true">

        <ImageView
            android:onClick="goHome"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="50"
            android:textStyle="bold"
            android:background="@color/transparent"
            android:src="@drawable/home"
            android:textSize="20dp"/>


        <ImageView
            android:onClick="goSearch"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="50"
            android:textStyle="bold"
            android:background="@color/transparent"
            android:src="@drawable/search"
            android:textSize="20dp"/>

        <ImageView
            android:onClick="goFavori"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="50"
            android:textStyle="bold"
            android:background="@color/transparent"
            android:src="@drawable/favorite"
            android:textSize="20dp"/>
    </LinearLayout>

</RelativeLayout>